dodato polje za unos lozinke

--- a/kontakt.html
+++ b/kontakt.html
@@ -9,6 +9,7 @@
     <form action="">
       <input type="text" placeholder="Ime i prezime" required />
       <input type="email" placeholder="Email" required />
+      <input type="password" name="" id="" />
     </form>
   </body>
 </html>
