selektori za kontakt formu

--- a/kontakt.html
+++ b/kontakt.html
@@ -6,10 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <form action="">
-      <input type="text" placeholder="Ime i prezime" required />
-      <input type="email" placeholder="Email" required />
-      <input type="password" name="" id="" />
+    <form action="" id="kontakt">
+      <input type="text" placeholder="Ime i prezime" name="ime" required />
+      <input type="email" placeholder="Email" name="email" required />
+      <input type="password" name="sifra" id="" required />
     </form>
   </body>
 </html>
