--- a/onama.html
+++ b/onama.html
@@ -13,13 +13,14 @@
 <!--MENI-->
 <nav>
     <div class="meni">
-       <ul>
+      <ul>
         <li><a href="index.html">Početna</a></li>
         <li><a href="ponuda.html">Ponuda</a></li>
         <li><a href="onama.html">O nama</a></li>
-       </ul> 
+        <li><a href="kontakt.html">Kontakt</a></li>
+      </ul>
     </div>
-</nav>
+  </nav>
 
 <div class="oNama">
     <h1><b>O nama</b></h1>
