--- a/ponuda.html
+++ b/ponuda.html
@@ -10,13 +10,14 @@
     <!--MENI-->
     <nav>
         <div class="meni">
-           <ul>
+          <ul>
             <li><a href="index.html">Početna</a></li>
             <li><a href="ponuda.html">Ponuda</a></li>
             <li><a href="onama.html">O nama</a></li>
-           </ul> 
+            <li><a href="kontakt.html">Kontakt</a></li>
+          </ul>
         </div>
-    </nav>
+      </nav>
     
     <h1>Ponuda agencije</h1>
     <div class="ponuda">
